update model loading

--- a/illusionGL.vcxproj.filters
+++ b/illusionGL.vcxproj.filters
@@ -55,6 +55,9 @@
     <ClInclude Include="builder.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="light.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="log.txt">
